yuzu/pds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pds
  namespace: pds
  labels:
    app.kubernetes.io/name: pds
    app.kubernetes.io/instance: pds
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pds
    app.kubernetes.io/instance: pds
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
