yuzu/pds/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pds
  namespace: pds
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: at.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pds
                port:
                  number: 80
    - host: "*.at.nokiy.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pds
                port:
                  number: 80
  tls:
  - hosts:
    - "at.nokiy.net"
    - "*.at.nokiy.net"
    secretName: pds-tls
